<resources>
    <string name="app_name">InventoryApp</string>

    <string name="add">insert dummy data</string>

    <string name="q">Quantity:</string>
    <string name="p">Product Name:</string>
    <string name="pr">Price:</string>
    <string name="supplierinfo">Supplier info:</string>
    <string name="dollar">$</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="empty_view_title">Empty Inventory....</string>
    <string name="empty_view_text">Get started by adding a product</string>

    <string name="new_product">Add Product</string>
    <string name="insert_failed">insert failed</string>
    <string name="insert_successful">insert successful</string>
    <string name="update_failed">update failed</string>
    <string name="update_successful">update successful</string>
    <string name="delete_failed">delete failed</string>
    <string name="delete_successful">delete successful</string>
    <string name="action_save">save</string>
    <string name="action_delete">delete</string>
    <string name="delete_all">delete all product</string>
    <string name="hint_sname">enter your name</string>
    <string name="hint_semail">enter your email</string>
    <string name="hint_phone">enter your phone number</string>
    <string name="edit_product">Edit Product</string>
    <string name="required_msg">you shouldn\'t left anything empty.. TRY AGAIN </string>
    <string name="sale">SALE</string>
    <string name="delete_q">Are you sure you want to delete this product?</string>
    <string name="delete">delete</string>
    <string name="cancel">Cancel</string>
    <string name="keep_editing">keep editing</string>
    <string name="discard">discard</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="sold_failed">sold failed</string>
    <string name="sold_successfully">sold successfully</string>
    <string name="call">CALL</string>
</resources>
