<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alaa.inventoryapp.ViewActivity"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:padding="10dp"
            android:text="@string/p"
            style="@style/Style1" />
        <TextView
            android:id="@+id/e1"
            style="@style/Style2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:padding="10dp"
            android:text="@string/pr"
            style="@style/Style1" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingStart="4dp">
            <TextView
                android:id="@+id/e2"
                android:maxLength="5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/dollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:padding="10dp"
            android:text="@string/q"
            style="@style/Style1"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:id="@+id/minus"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:text="@string/minus" />
            <TextView
                android:id="@+id/e3"
                android:layout_height="wrap_content"
                android:layout_width="90dp"
                android:maxLength="5"
                style="@style/Style2" />
            <Button
                android:id="@+id/plus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/plus" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:padding="10dp"
            android:text="@string/supplierinfo"
            style="@style/Style1" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingStart="4dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/e4"
                android:hint="@string/hint_sname"
                style="@style/Style2" />
            <TextView
                android:id="@+id/e5"
                android:hint="@string/hint_semail"
                style="@style/Style2" />
            <TextView
                android:id="@+id/e6"
                android:hint="@string/hint_phone"
                style="@style/Style2" />
            <Button
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
